--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -1,16 +1,22 @@
 {
   "name": "@taskbox/component-library",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "lib/cjs/index.js",
+  "typings": "lib/cjs/index.d.ts",
+  "module": "lib/esm/index.js",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "build": "yarn build:cjs && yarn build:esm",
+    "build:cjs": "tsc",
+    "build:esm": "tsc -m es6 --outDir lib/esm"
+  },
   "peerDependencies": {
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "@types/react": "^16.9.35",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "eslint-config-airbnb": "18.1.0",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.20.0"
+    "typescript": "^3.9.2"
   }
 }
