--- a/packages/web-app/package.json
+++ b/packages/web-app/package.json
@@ -5,7 +5,11 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "@types/react": "^16.9.35",
+    "typescript": "^3.9.2"
   }
 }
