chore: 🔧 add component library to web app

--- a/packages/web-app/package.json
+++ b/packages/web-app/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@taskbox/component-library": "1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
